--- a/src/widgets/navigation.kv
+++ b/src/widgets/navigation.kv
@@ -3,6 +3,7 @@
 #:import re re
 #:import CardTransition kivy.uix.screenmanager.CardTransition
 #:include src/widgets/buttons.kv
+#:include src/widgets/scrolllabel.kv
 #:include src/widgets/popups.kv
 #:include src/widgets/screensgeneral.kv
 #:include src/widgets/screensettings.kv
