add concurrency warning

--- a/src/widgets/screencircletask.kv
+++ b/src/widgets/screencircletask.kv
@@ -90,6 +90,15 @@
             id: df2_warning
             halign: 'right'
 
+    AnchorLayout:
+        anchor_x: 'center'
+        anchor_y: 'bottom'
+
+        SliderHint:
+            id: concurrency_warning
+            text: _("Use sliders simultaneously.")
+            halign: 'center'
+
     FloatLayout:
         canvas:
             Color:
