demographic data popup

--- a/src/widgets/screenconsents.kv
+++ b/src/widgets/screenconsents.kv
@@ -59,4 +59,4 @@
             MDRaisedButton:
                 text: _("Agree")
                 font_size: 24
-                on_release: root.on_consent()
+                on_release: root.dispatch('on_consent')
