--- a/src/widgets/popups.kv
+++ b/src/widgets/popups.kv
@@ -20,3 +20,30 @@
         helper_text: _("Error: invalid input")
         helper_text_mode: "on_error"
         pos_hint: {"center_y": .5}
+
+<DemographicsContent>
+    orientation: 'vertical'
+    spacing: "12dp"
+    padding: "10dp"
+
+    MDLabel:
+        text: _("You can voluntarily give us demographic information about yourself.")
+        font_style: 'Caption'
+
+    MDGridLayout:
+        cols: 3
+        rows: 2
+
+        MDLabel:
+            text: _("Age")
+
+        MDDropDownItem:
+            id: age_dropdown
+            on_release: root.age_menu.open()
+        Widget:
+        MDLabel:
+            text: _("Gender")
+
+        MDDropDownItem:
+            id: gender_dropdown
+            on_release: root.gender_menu.open()
