--- a/src/widgets/screencircletask.kv
+++ b/src/widgets/screencircletask.kv
@@ -11,6 +11,7 @@
     AnchorLayout:
         anchor_x: 'left'
         anchor_y: 'center'
+        padding: sp(20), 0
 
         # Debug Label
         #Label:
@@ -41,6 +42,7 @@
     AnchorLayout:
         anchor_x: 'right'
         anchor_y: 'center'
+        padding: sp(20), 0
 
         # Debug Label
         #Label:
