--- a/src/widgets/popups.kv
+++ b/src/widgets/popups.kv
@@ -3,8 +3,7 @@
 
 <TextInputContent>
     orientation: "vertical"
-    spacing: "12dp"
-    padding: "10dp"
+    spacing: dp(12)
     description: _("Enter a new value.")
     input: ""
 
@@ -23,8 +22,7 @@
 
 <DemographicsContent>
     orientation: 'vertical'
-    spacing: "12dp"
-    padding: "10dp"
+    spacing: dp(12)
 
     MDLabel:
         text: _("You can voluntarily give us demographic information about yourself.")
@@ -32,7 +30,7 @@
 
     MDBoxLayout:
         orientation: 'vertical'
-        spacing: "18dp"
+        spacing: dp(24)
 
         MDBoxLayout:
             MDLabel:
