--- a/src/widgets/sliders.kv
+++ b/src/widgets/sliders.kv
@@ -7,8 +7,8 @@
     value: self.max * 0.1
     orientation: 'vertical'
     value_track_color: [0.25, 0.52, 0.95, 1]
-    cursor_size: [sp(64)]*2
-    padding: sp(48)
+    cursor_size: [dp(64)]*2
+    padding: dp(38)
     sensitivity: 'handle'
     size_hint: None, 1
 
@@ -17,7 +17,7 @@
     text: _("Please use this slider.")
     size_hint_y: 0.1
     size: self.texture_size
-    padding: 10, 10
+    padding: dp(10), dp(10)
     halign: 'center'
     valign: 'middle'
     theme_text_color: "Error"
