--- a/src/widgets/screensgeneral.kv
+++ b/src/widgets/screensgeneral.kv
@@ -30,8 +30,9 @@
 
             MDGridLayout:
                 cols: 1
-                padding: dp(10), 0
+                padding: dp(10), dp(10)
                 spacing: dp(10)
+                adaptive_height: True
 
                 MDLabel:
                     text: root.title
@@ -60,21 +61,20 @@
                     height: self.texture_size[1]
                     halign: 'center'
                     valign: 'top'
-                MDGridLayout:
-                    rows: 1
+                MDBoxLayout:
+                    orientation: 'vertical'
                     spacing: dp(20)
-                    Widget:  # Spacer.
+                    adaptive_height: True
+
                     TaskButton:
                         text: _("Circle Task")
                         task: 'Circle Task'
                         font_size: sp(12)
                         pos_hint: {"center_x": .5, "center_y": .5}
-                        on_release: root.manager.start_task(self.task)
-                    Widget:  # Spacer.
-
-                Widget:  # Spacer.
+                        on_release: root.manager.show_consent(self.task)
 
 <ScreenOutro>:
+    on_leave: scroll.scroll_y = 1
     navbar_enabled: True
     topbar: topbar
 
@@ -91,35 +91,34 @@
             scroll_type: ['bars', 'content']
 
             MDGridLayout:
-                cols:1
+                cols: 1
+                padding: dp(10), dp(10)
+                spacing: dp(10)
+                adaptive_height: True
 
                 MDLabel:
                     text: root.msg
                     markup: True
-                    text_size: root.width, None
-                    size: self.texture_size
+                    size_hint_y: None
+                    height: self.texture_size[1]
                     halign: 'center'
                     valign: 'middle'
 
-                BoxLayout:
-                    Widget:
-                    MDBoxLayout:
-                        orientation: 'vertical'
-                        spacing: dp(20)
-                        padding: dp(10), dp(10)
+                MDBoxLayout:
+                    orientation: 'vertical'
+                    spacing: dp(20)
+                    padding: dp(10), dp(10)
+                    adaptive_height: True
 
-                        AnchorLayout:
-                            anchors: 'center', 'center'
-                            MDRectangleFlatIconButton:
-                                icon: 'upload'
-                                text: _("Upload")
-                                disabled: (not root.upload_btn_enabled) or app.data_mgr.is_data_sent or app.data_mgr.is_invalid
-                                on_release: root.on_upload()
-                        AnchorLayout:
-                            anchors: 'center', 'center'
-                            MDRectangleFlatIconButton:
-                                icon: 'email-send'
-                                text: _("Send via E-Mail")
-                                disabled: not app.settings.is_email_enabled
-                                on_release: app.data_mgr.send_email(getattr(app.settings, app.settings.current_task.lower().replace(" ", "_")).email_recipient)
-                    Widget:
+                    MDRectangleFlatIconButton:
+                        icon: 'upload'
+                        text: _("Upload")
+                        pos_hint: {"center_x": .5, "center_y": .5}
+                        disabled: (not root.upload_btn_enabled) or app.data_mgr.is_data_sent or app.data_mgr.is_invalid
+                        on_release: root.on_upload()
+                    MDRectangleFlatIconButton:
+                        icon: 'email-send'
+                        text: _("Send via E-Mail")
+                        pos_hint: {"center_x": .5, "center_y": .5}
+                        disabled: not app.settings.is_email_enabled
+                        on_release: app.data_mgr.send_email(getattr(app.settings, app.settings.current_task.lower().replace(" ", "_")).email_recipient)
