--- a/src/widgets/screeninstructions.kv
+++ b/src/widgets/screeninstructions.kv
@@ -73,6 +73,7 @@
 
             Widget:  # Spacer
             MDRaisedButton:
+                id: start_btn
                 text: _("Start")
                 font_size: sp(12)
                 halign: 'center'
