--- a/src/widgets/sliders.kv
+++ b/src/widgets/sliders.kv
@@ -7,6 +7,8 @@
     value: self.max * 0.1
     orientation: 'vertical'
     value_track_color: [0.25, 0.52, 0.95, 1]
+    cursor_image: f'res/sliderhandle_{self.orientation[0]}_on.png'
+    cursor_disabled_image: f'res/sliderhandle_{self.orientation[0]}_off.png'
     cursor_size: [dp(64)]*2
     padding: dp(38)
     sensitivity: 'handle'
